<resources>
    <string name="app_name">rluURL</string>
    <string name="action_about">about</string>
    <string name="title_shortenURL">shorten URL</string>
    <string name="removeTime_hint">0 – 720 hours (0 - to create a perpetual link)</string>
    <string name="previewLink">preview</string>
    <string name="shorten">Shorten URL</string>
    <string name="ok">ОК</string>
    <string name="noNetwork">No network connection</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2743559009390249/1883113615</string>
    <string name="version">"Version: "</string>
    <string name="versionCode">Build #</string>
    <string name="rateApp">Rate this APP</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="goToRuStoreQestion">Go to RuStore?</string>
    <string name="about">About</string>
    <string name="info_short">Short URL</string>
    <string name="info_long">Long URL</string>
    <string name="info_tittle">Link detalis</string>
    <string name="no_links">No shortened links!</string>
    <string-array name="noLinksHistory">
        <item>No shortened links!</item>
        <item>To use history, shorten at least 1 link</item>
    </string-array>
    <string name="intendificatorReqest">Please provide access to your advertising ID</string>
    <string name="intendificatorMessage">This app is free, but it contains ads.\nDue to the fact that AdMob by default uses an advertising intensifier, and Google Play requires the user\'s consent to use the advertising intensifier, you need either to allow access to the intensifier, or to refuse to use this application.\n\nPrivacy policy is available in the About window.</string>
    <string name="privacy">Privacy policy</string>
    <string name="view_source_code">Source code</string>
</resources>